[gd_scene load_steps=10 format=2]

[ext_resource path="res://TitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Souvenir-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://images/shop_nori.png" type="Texture" id=3]
[ext_resource path="res://scripts/Shop.gd" type="Script" id=4]
[ext_resource path="res://fonts/CooperBlackStd.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]

[sub_resource type="Theme" id=2]
/fonts/SpamFont = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 37
font_data = ExtResource( 6 )

[node name="Scene" type="Node2D"]
script = ExtResource( 4 )

[node name="shop_background" type="Sprite" parent="."]
position = Vector2( 512, 384 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 100.0
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Store"
align = 1
valign = 1

[node name="Item1" type="Label" parent="."]
margin_left = 88.0
margin_top = 392.0
margin_right = 351.0
margin_bottom = 431.0
rect_pivot_offset = Vector2( 136, 184 )
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "10 Spam:"
align = 1
valign = 1

[node name="Buy1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.0
margin_top = 484.0
margin_right = 306.0
margin_bottom = 524.0
rect_pivot_offset = Vector2( 136, 16 )
text = "Buy"

[node name="Item2" type="Label" parent="."]
margin_left = 384.0
margin_top = 392.0
margin_right = 648.0
margin_bottom = 431.0
rect_pivot_offset = Vector2( 136, 184 )
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "10 Spam:"
align = 1
valign = 1

[node name="Buy2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 432.0
margin_top = 484.0
margin_right = 598.0
margin_bottom = 524.0
rect_pivot_offset = Vector2( 136, 16 )
text = "Buy"

[node name="Item3" type="Label" parent="."]
margin_left = 672.0
margin_top = 392.0
margin_right = 936.0
margin_bottom = 431.0
rect_pivot_offset = Vector2( 136, 184 )
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.0745098, 0.0588235, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "10 Spam:"
align = 1
valign = 1

[node name="Buy3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 720.0
margin_top = 484.0
margin_right = 886.0
margin_bottom = 524.0
rect_pivot_offset = Vector2( 136, 16 )
text = "Buy"

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 432.0
margin_top = 583.0
margin_right = 598.0
margin_bottom = 623.0
rect_pivot_offset = Vector2( 136, 16 )
text = "Back"

[node name="Subtitle" type="Label" parent="."]
margin_top = 75.5
margin_right = 1024.0
margin_bottom = 189.5
rect_pivot_offset = Vector2( 569, 248 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.0392157, 0, 0.576471, 1 )
custom_fonts/font = SubResource( 4 )
text = "How much do you want to buy?"
align = 1
valign = 1

[connection signal="pressed" from="Buy1" to="." method="_on_Buy1_pressed"]
[connection signal="pressed" from="Buy2" to="." method="_on_Buy2_pressed"]
[connection signal="pressed" from="Buy3" to="." method="_on_Buy3_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_ContinueButton_pressed"]
